typescript/checker/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            572,
        ),
        hi: BytePos(
            573,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:15:5
   |
15 | var x: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            654,
        ),
        hi: BytePos(
            655,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:18:5
   |
18 | var y: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            728,
        ),
        hi: BytePos(
            729,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:21:5
   |
21 | var z: number;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            771,
        ),
        hi: BytePos(
            772,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:24:5
   |
24 | var w: number;
   |     ^

error: unimplemented
expand_export_info(T)
File: $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:26:9
   |
26 | declare function bar<T>(param: { x?: T }): T;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            842,
        ),
        hi: BytePos(
            845,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:28:9
   |
28 | var b = bar({});
   |         ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            856,
        ),
        hi: BytePos(
            857,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:29:5
   |
29 | var b: {};
   |     ^

